src/test/ui/type-alias-impl-trait/issue-60564.min_tait.stderr
error: non-defining opaque type use in defining scope
  --> $DIR/issue-60564.rs:22:34
   |
LL |     fn iter_bits(self, n: u8) -> Self::BitsIter {
   |                                  ^^^^^^^^^^^^^^
   |
note: used non-generic type `u8` for generic parameter
  --> $DIR/issue-60564.rs:11:25
   |
LL | type IterBitsIter<T, E, I> = impl std::iter::Iterator<Item = I>;
   |                         ^

error: aborting due to previous error

